# periphery

./: MODULE.bazel
bazel/patches/: BUILD.bazel  rules_apple_swift3.patch
