module(
    name = "periphery",
    version = "3.3.0",
    compatibility_level = 1,
)

# Bazel dependencies
bazel_dep(name = "rules_swift", version = "3.4.1")
bazel_dep(name = "rules_apple", version = "4.3.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "apple_support", version = "2.1.0")
bazel_dep(name = "platforms", version = "0.0.11")

# Swift dependencies
bazel_dep(name = "aexml", version = "4.7.0.1")
bazel_dep(name = "swift_argument_parser", version = "1.7.0")
bazel_dep(name = "swift-filename-matcher", version = "2.0.1")
bazel_dep(name = "swift-indexstore", version = "0.4.0")
bazel_dep(name = "swift-syntax", version = "602.0.0.1")
bazel_dep(name = "swift-system", version = "1.6.3")
bazel_dep(name = "pathkit", version = "1.0.1.1")
bazel_dep(name = "xcodeproj", version = "9.7.1")
bazel_dep(name = "yams", version = "6.2.0")

# Generated repo
use_repo(use_extension("//bazel:generated.bzl", "generated"), "periphery_generated")

# Override rules_apple to use rules_swift 3.x (required for Swift Testing support)
archive_override(
    module_name = "rules_apple",
    urls = ["https://github.com/bazelbuild/rules_apple/archive/70ea3a9eb5d3972ad84fe724ae9d4059ac3f29f4.tar.gz"],
    strip_prefix = "rules_apple-70ea3a9eb5d3972ad84fe724ae9d4059ac3f29f4",
    integrity = "sha256-uAS09lk/fKGXCUOxjICD2MLY4xu3tdfw9Rv3fiQgXQU=",
    patches = ["//bazel/patches:rules_apple_swift3.patch"],
    patch_strip = 1,
)

# Bazel dev dependencies
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)
